# PR12-CyA-2425

./: .clang-format  CMakeLists.txt  Makefile  README.md
.zed/: settings.json  tasks.json
docs/: input1.txt  output1.dot  output1.txt  output2-random.dot  output2.dot  output2.txt
include/: mitata.h
include/cya/: cli.h  parser.h  point_types.h  pointset.h  program.h  subtree.h
src/: CMakeLists.txt  main.cc  poinset.cc  point_types.cc  program.cc
