cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
set(PROJECT_NAMESPACE "cya")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project("PR11-CYA-2425"
  VERSION 1.0.0
  DESCRIPTION "Práctica 11 de Cya 2425"
  LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(PROJECT_SHORTNAME "cya")
set(CMAKE_BUILD_TYPE RelWithDebInfo)

add_subdirectory("src")
